Fixed bug #78185 (File cache no longer works)

(cherry picked from commit cd6a6e4cf2677bfbe2a21164239737eb22bd4da6)